--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!--Fonte MUI-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+
     <title>Lázaro Fernandes Art</title>
   </head>
   <body>
